<resources>
    <string name="app_name">SnapBill</string>
    <string name="tag_line"><i>track all your expenses...</i></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">227418894425054</string>
    <string name="fb_login_protocol_scheme">fb227418894425054</string>


    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="title_activity_bill_reveiw">BillReveiwActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add_bill">AddBillActivity</string>

    <string name="title_activity_picture">PictureActivity</string>

    <string name="title_activity_new_bill">NewBillActivity</string>
    <string name="title_activity_review_bill">Review Bill</string>
    <string name="title_activity_register">Join Us</string>


    <string name="newbill_instruction_1">Where is the bill image?</string>
    <string name="newbill_instruction_2">Tap on text to select!</string>
    <string name="newbill_instruction_2_loading">"OK! Let me read..."</string>
    <string name="newbill_instruction_3">Select the date below</string>
    <string name="newbill_instruction_4">Choose your bill category</string>

    <string name="hint_input"><small><i>. . .</i></small></string>
    <string name="hint_merchant"><small><i>where did you buy from?</i></small></string>
    <string name="hint_amount"><small><i>how much was it?</i></small></string>
    <string name="hint_date"><small><i>when was it?</i></small></string>
    <string name="hint_category"><small><i>what was it?</i></small></string>

    <string name="hint_register_email"><small><i>your mail id?</i></small></string>
    <string name="hint_register_pass"><small><i>your secret word?</i></small></string>
    <string name="hint_register_repass"><small><i>just to be sure</i></small></string>
    <string name="hint_token"><small><i>6-character code</i></small></string>

    <string name="error_empty_input">should not be empty</string>
    <string name="error_not_number">should be a valid number</string>

    <string name="network_error_invalid_token">invalid token</string>

    <string name="button_goto_login"><u>Already joined?</u></string>
    <string name="button_goto_register"><u>Did not join yet?</u></string>
    <string name="activation_msg">Check your mail for Activation code.\nIt will expire within 2 minutes</string>

    <string name="pref_logged_in">pref_logged_in</string>

    <string name="font_moon_bold">fonts/moon-bold.ttf</string>
    <string name="font_vt323">fonts/VT323-Regular.ttf</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
