<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                fontPath="@string/font_moon_bold"
                android:id="@+id/bill_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Review"
                android:textSize="40sp"
                android:textColor="@color/colorPrimaryText"/>
            <TextView
                fontPath="@string/font_moon_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Bill"
                android:textSize="40sp"
                app:font_name="moon-bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_store_black_24dp"
                    android:tint="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Merchant"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:imeOptions="actionNext"
                    android:id="@+id/input_merchant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:gravity="left|bottom"
                    android:hint="@string/hint_merchant"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/bg_edit_text_padding"
                    android:padding="8dp"
                    android:textCursorDrawable="@drawable/cursor_input"
                    android:textSize="16sp"
                    android:inputType="text|textCapSentences"
                    android:focusableInTouchMode="true">
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_local_atm_black_24dp"
                    android:tint="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Amount"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/colorPrimaryText"
                    app:font_name="moon-bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/input_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="$"
                    android:textSize="18sp"
                    android:textColor="@color/white" />

                <EditText
                    android:imeOptions="actionNext"
                    app:font_name="Montserrat-Regular"
                    android:id="@+id/input_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:focusable="false"
                    android:gravity="left|bottom"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_amount"
                    android:textCursorDrawable="@drawable/cursor_input"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/bg_edit_text_padding"
                    android:padding="8dp"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:id="@+id/layout_date"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:tint="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Date"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/colorPrimaryText"
                    app:font_name="moon-bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:hint="@string/hint_date"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/bg_edit_text_padding"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/cursor_input"
                    android:inputType="text"
                    android:enabled="true"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_apps_black_24dp"
                    android:tint="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Category"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    app:font_name="Montserrat-Regular"
                    android:id="@+id/input_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:focusable="false"
                    android:textCursorDrawable="@drawable/cursor_input"
                    android:inputType="text"
                    android:maxLines="1"
                    android:gravity="left"
                    android:hint="@string/hint_category"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/bg_edit_text_padding"
                    android:padding="8dp"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <com.trackexpense.snapbill.ui.ProgressButton
            android:id="@+id/save_button"
            android:text="Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>